--- a/manifest.json
+++ b/manifest.json
@@ -8,8 +8,8 @@
   "theme_color": "#1e1b4b",
   "icons": [
     {
-      "src": "https://flagcdn.com/w320/il.png",
-      "sizes": "320x213",
+      "src": "https://flagcdn.com/w160/il.png",
+      "sizes": "160x107",
       "type": "image/png",
       "purpose": "any"
     },
@@ -18,6 +18,12 @@
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
+    },
+    {
+      "src": "https://cdn-icons-png.flaticon.com/192/197/197577.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any"
     }
   ]
 }
