--- a/manifest.json
+++ b/manifest.json
@@ -8,20 +8,14 @@
   "theme_color": "#1e1b4b",
   "icons": [
     {
-      "src": "https://flagcdn.com/w160/il.png",
-      "sizes": "160x107",
+      "src": "https://raw.githubusercontent.com/googlefonts/noto-emoji/main/png/512/emoji_u1f1ee_1f1f1.png",
+      "sizes": "512x512",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/197/197577.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable"
-    },
-    {
-      "src": "https://cdn-icons-png.flaticon.com/192/197/197577.png",
-      "sizes": "192x192",
+      "src": "https://raw.githubusercontent.com/googlefonts/noto-emoji/main/png/128/emoji_u1f1ee_1f1f1.png",
+      "sizes": "128x128",
       "type": "image/png",
       "purpose": "any"
     }
