--- a/manifest.json
+++ b/manifest.json
@@ -8,14 +8,14 @@
   "theme_color": "#1e1b4b",
   "icons": [
     {
-      "src": "https://raw.githubusercontent.com/googlefonts/noto-emoji/main/png/512/emoji_u1f1ee_1f1f1.png",
+      "src": "https://flagcdn.com/w512/il.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "https://raw.githubusercontent.com/googlefonts/noto-emoji/main/png/128/emoji_u1f1ee_1f1f1.png",
-      "sizes": "128x128",
+      "src": "https://flagcdn.com/w160/il.png",
+      "sizes": "160x120",
       "type": "image/png",
       "purpose": "any"
     }
